--- a/index.html
+++ b/index.html
@@ -111,28 +111,35 @@
         <section class="my-5">
             <div class="container">
                 <div class="row">
-                    <div class="col panda-watch d-flex justify-content-between text-white align-items-center p-1  rounded-3">
-                        <div class="ms-5">
-                            <h1>Watch</h1>
-                        </div>
-                        <div class="me-3">
-                            <img class="width=" 100px" height="100px" src="images/categories/watch.png" alt="">
+                    <div class="col-lg-4 col-12">
+                        <div class="col panda-watch d-flex justify-content-between text-white align-items-center p-1  rounded-3">
+                            <div class="ms-5">
+                                <h1>Watch</h1>
+                            </div>
+                            <div class="me-3">
+                                <img class="width=" 100px" height="100px" src="images/categories/watch.png" alt="">
+                            </div>
+                    </div>
+                    </div>
+
+                    <div class="col-lg-4 col-12">
+                        <div class="col  panda-bag d-flex justify-content-between text-white align-items-center ms-3 p-1 rounded-3">
+                            <div class="ms-3">
+                                <h1>bag</h1>
+                            </div>
+                            <div class="me-3">
+                                <img class="width=" 100px" height="100px" src="images/categories/bag.png" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="col panda-bag d-flex justify-content-between text-white align-items-center ms-3 p-1 rounded-3">
-                        <div class="ms-3">
-                            <h1>bag</h1>
-                        </div>
-                        <div class="me-3">
-                            <img class="width=" 100px" height="100px" src="images/categories/bag.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col panda-shoes d-flex justify-content-between text-white align-items-center ms-3 p-1 rounded-3">
-                        <div class="ms-5">
-                            <h1>Shoes</h1>
-                        </div>
-                        <div class="me-3">
-                            <img class="width=" 100px" height="100px" src="images/categories/shoes.png" alt="">
+                    <div class="col-lg-4 col-12">
+                        <div class="col panda-shoes d-flex justify-content-between text-white align-items-center ms-3 p-1 rounded-3">
+                            <div class="ms-5">
+                                <h1>Shoes</h1>
+                            </div>
+                            <div class="me-3">
+                                <img class="width=" 100px" height="100px" src="images/categories/shoes.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
