--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-12">
-                        <div class="col panda-watch d-flex justify-content-between text-white align-items-center p-1  rounded-3">
+                        <div class="col panda-watch d-flex justify-content-between text-white align-items-center me-3 p-1  rounded-3">
                             <div class="ms-5">
                                 <h1>Watch</h1>
                             </div>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="col-lg-4 col-12">
-                        <div class="col  panda-bag d-flex justify-content-between text-white align-items-center ms-3 p-1 rounded-3">
+                        <div class="col  panda-bag d-flex justify-content-between text-white align-items-center me-3 p-1 rounded-3">
                             <div class="ms-3">
                                 <h1>bag</h1>
                             </div>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-12">
-                        <div class="col panda-shoes d-flex justify-content-between text-white align-items-center ms-3 p-1 rounded-3">
+                        <div class="col panda-shoes d-flex justify-content-between text-white align-items-center p-1 rounded-3">
                             <div class="ms-5">
                                 <h1>Shoes</h1>
                             </div>
